# gdtoa

./: .gitignore  Makefile.in  README  README.hpa  arithchk.c  configure.ac  dmisc.c  dtoa.c  g_Qfmt.c  g_Qfmt_p.c  g__fmt.c  g_ddfmt.c  g_ddfmt_p.c  g_dfmt.c  g_dfmt_p.c  g_ffmt.c  g_ffmt_p.c  g_xLfmt.c  g_xLfmt_p.c  g_xfmt.c  g_xfmt_p.c  gdtoa.c  gdtoa.h  gdtoa_fltrnds.h  gdtoaimp.h  gethex.c  gmisc.c  hd_init.c  hexnan.c  makefile  makefile.old  misc.c  printf.c0  qnan.c  smisc.c  stdio1.h  strtoIQ.c  strtoId.c  strtoIdd.c  strtoIf.c  (+23 more)
test/: Qtest.c  dItest.c  ddtest.c  dt.c  dtest.c  ftest.c  getround.c  pftest.c  strtodt.c  xLtest.c  xQtest.c  xtest.c
